# data-engineering-pipeline

./: README.md
data/: generate_products_csv.py  products_enriched.csv
infrastructure/: postgresql-deployment.yaml
infrastructure/k8s/minio_service/: README.md  deployment.yaml  secret.yaml  service.yaml  storage.yaml
infrastructure/k8s/postgres/: README.md  configmap.yaml  deployment.yaml  secret.yaml  service.yaml  storage.yaml
tests/: .env  .env.example  pyproject.toml
tests/services/minio_tests/: test_minio.py
tests/services/postgres/: test_postgres.py
tests/utils/: minio_client.py  postgres_utils.py
